<resources>
    <string name="app_name">TesteFB7</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Logar</string>
    <string name="action_sign_in_email">Logar com Email</string>
    <string name="action_sign_in_facebook">Logar com Facebook</string>
    <string name="action_sign_in_github">Logar com GitHub</string>
    <string name="action_sign_in_google">Logar com Google</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_twitter">Sign in com Twitter</string>
    <string name="action_sign_up">Cadastrar</string>
    <string name="action_sign_up_call">Cadastrar</string>
    <string name="action_sign_up_short">Cadastro</string>
    <string name="action_reset_call">Recuperar acesso</string>
    <string name="link_accounts">Link contas</string>
    <string name="logout">Logout</string>
    <string name="prompt_data_nascimento">Data de Nascimento</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_endereco_cidade">Cidade</string>
    <string name="prompt_endereco_complemento">Complemento</string>
    <string name="prompt_endereco_estado">Estado</string>
    <string name="prompt_endereco_numero">nº</string>
    <string name="prompt_endereco_rua">Rua</string>
    <string name="prompt_feminino">Feminino</string>
    <string name="prompt_masculino">Masculino</string>
    <string name="prompt_name">Nome Completo</string>
    <string name="prompt_name_completo">Nome Completo</string>
    <string name="prompt_name_salao">Nome do Salão</string>
    <string name="prompt_nascimento_dia">Dia</string>
    <string name="prompt_nascimento_mes">Mês</string>
    <string name="prompt_nascimento_ano">Ano</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_password_again">Confirme a Senha</string>
    <string name="prompt_rg">RG</string>
    <string name="prompt_spinner_sexo">Sexo</string>
    <string name="prompt_telefone1">Telefone 1</string>
    <string name="prompt_telefone2">Telefone 2</string>
    <string name="prompt_unisex">Unisex</string>
    <string name="remove_user">Remover conta</string>
    <string name="reset">Recuperar acesso</string>
    <string name="reset_bt_label">Iniciar recuperação acesso</string>
    <string name="salvar">Salvar</string>
    <string name="title_activity_teste">TesteActivity</string>
    <string name="title_activity_reset">ResetActivity</string>
    <string name="update_login">Atualizar login</string>
    <string name="update_password">Atualizar senha</string>
    <string name="update_profile">Atualizar profile</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="title_activity_update_login">UpdateLoginActivity</string>
    <string name="title_activity_update_password">UpdatePasswordActivity</string>
    <string name="title_activity_link_accounts">LinkAccountsActivity</string>
    <string name="title_activity_remove_user">RemoveUserActivity</string>
    <string name="title_activity_frist_time">FristTimeActivity</string>
    <string name="title_activity_sign_up2">SignUpActivity2</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_catastro">CadastroActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_configuracao_inicial">ConfiguracaoInicialActivity</string>
</resources>
